src/app/shared/scss/footer.scss
.footer { background: grey; height: 175px; padding-top: 20px; }
.footer a { display: block; color: white; line-height: 30px; font-family: OpenSans-Light; cursor: pointer; text-decoration: none; }
.footer a:hover { color: #ecf0f1; text-decoration: none; }
.footer p { margin-top: 10px; display: block; color: white; line-height: 30px; font-family: OpenSans-Light; 
            border-top: 1px solid white; }

* { margin: 0; }
html, body { height: 100%; }
.wrapper {
	min-height: 100%;
	height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
	height: 100%;
	margin: 0 auto -175px; /* the bottom margin is the negative value of the footer's height */
}
.footer, .push {
	height: 175px; /* .push must be the same height as .footer */
}

